# QualityGrowthPi

./: .env.template  .gitignore  Makefile  README.md  conftest.py  pyproject.toml  requirements.txt
config/: app.yaml  llm.yaml  logging.yaml  providers.yaml.template  strategy.yaml
config/prompts/: advisory_system.txt  extraction_schema.json  narrative_system.txt  (+1 more)
data/: README.md  assemble_marketd.py  security_master_snapshot.json  stat_arb_price_history_diagnostics.json
docs/: architecture.md  data-providers.md  deployment.md  llm-agent.md  operations.md  quickstart.md  regression-testing.md  security.md
lean_workspace/: lean.json
logs/: README.md
results/: README.md
scripts/: bootstrap_pi.sh  capture_cloud_baseline.sh  check_alpaca_paper.sh  debug_massive_adjusted_mismatch.py  download_data.sh  export_stat_arb_price_history.py  list_qc_nodes.sh  list_qc_projects.sh  llm_healthcheck.sh  llm_report.sh  llm_smoke_test.sh  paper_status.sh  qc_project_status.sh  read_backtest_diagnostics.sh  run_backtest.sh  run_e2e.sh  run_live_paper.sh  run_live_provider.sh  run_short_backtest_regression.sh  run_tests.sh  run_trade_workflow.sh  setup_env.sh  smoke_test.sh  stop_live_paper.sh  sync_lean_config.sh  sync_lean_project.sh  sync_qc_cloud_project.sh  train_stat_arb_softvote.py  upload_stat_arb_model.sh  validate_massive_adjusted_history.py  verify_install.sh
src/: __init__.py  audit.py  health.py  logging_utils.py  main.py  models.py  operator_workflow.py  risk_policy.py  scoring.py  settings.py  state_store.py  strategy_settings.py  timing.py
state/: README.md
(+109 files in other folders)
